sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:7: error: '(' expected but identifier found.
      if plusPetit(j+1,j){
         ^